# TCL_moxing_ceva_ble

./: .gitignore
components/bt/: CMakeLists.txt  CevaBLE.sln  CevaBLE.vcxproj  CevaBLE.vcxproj.filters  CevaHost.vcxproj  CevaHost.vcxproj.filters
components/bt/LiveImportAPI/: LiveImportAPI.cpp  LiveImportAPI.h  LiveImportAPI.vcxproj  LiveImportAPI.vcxproj.filters  ReadMe.txt  dllmain.cpp  stdafx.cpp
components/bt/WinBLE/: ChildView.cpp  EM.h  MainFrm.cpp  ReadMe.txt  Resource.h  VM.cpp  VM.h  WinBLE.cpp  WinBLE.h  WinBLE.rc  WinBLE.vcxproj  WinBLE.vcxproj.filters  stdafx.cpp  stdafx.h
components/bt/WinBLE/res/: WinBLE.rc2
components/bt/app/: app.c  app.h  app_audio.h  app_batt.c  app_batt.h  app_dis.c  app_dis.h  app_gatv.c  app_gatv.h  app_hid.c  app_hid.h  app_ht.c  app_ht.h  app_keypad.h  app_sec.c  app_sec.h  app_task.c  app_task.h  app_voice.h  arch_main.c  rwapp_config.h
components/bt/include/: ms.h  ms_common.h
components/bt/ip/inc/: _reg_acc.h  _reg_blecore.h  _reg_counter.h  _reg_dmac_channel.h  _reg_dmac_common.h  _reg_dmaca_channel.h  _reg_dmaca_common.h  _reg_em_ble_cs.h  _reg_em_ble_ral.h  _reg_em_ble_rx_cte_desc.h  _reg_em_ble_rx_desc.h  _reg_em_ble_rx_iso_buf.h  _reg_em_ble_rx_iso_desc.h  _reg_em_ble_tx_desc.h  _reg_em_ble_tx_iso_buf.h  _reg_em_ble_tx_iso_desc.h  _reg_em_ble_wpal.h  _reg_em_et.h  _reg_gpio.h  _reg_gpio2.h  _reg_intcntl.h  _reg_ipcore.h  _reg_ipcore_bts.h  _reg_iqgen.h  _reg_modemhp.h  _reg_mwsgen.h  _reg_pcm.h  _reg_plf.h  _reg_ps2.h  _reg_romcore.h  _reg_rtc.h  _reg_spi.h  _reg_uart.h  _reg_uart2.h  reg_acc.h  reg_blecore.h  reg_counter.h  reg_dmac_channel.h  reg_dmac_common.h  reg_dmaca_channel.h  (+28 more)
components/bt/plf/: atiny_log.c  ble.c  ble_rf.c  mdm.c  printf-stdarg.c
components/bt/plf/data_path/: sourcelist.txt
components/bt/plf/include/: arch.h  atiny_log.h  ble.h  ble_em.h  ble_reg.h  boot.h  co_int.h  compiler.h  compiler_vt.h  global.h  led.h  ll.h  mdm.h  mdm_reg.h  reg_access.h  system_ms.h  type_def.h
components/bt/plf/plf/: ms_spi.c  ms_spi.h  ms_spi_reg.h
components/bt/plf/win32/: NUCLEI_N.h  arch.c  arch.h  arch_main.c  led.h  ll.h  reg_access.h
components/bt/vtPatch/: JumpTable.c  vtPatchs.c
components/freertos/: CMakeLists.txt  tasks.c
components/freertos/include/: FreeRTOS.h  FreeRTOSConfig.h
components/freertos/portable/: port.c  portasm.S  portmacro.h
components/freertos/portable/MemMang/: heap_4.c
components/freertos/test/: test_freertos_event.c  test_freertos_list.c  test_freertos_mailbox.c  test_freertos_mem.c  test_freertos_mutex.c  test_freertos_notify.c  test_freertos_notify_counting.c  test_freertos_notify_event.c  test_freertos_queue.c  test_freertos_semaphore.c  test_freertos_semaphore_count.c  test_freertos_semaphore_mutex.c  test_freertos_task_mgmt.c  test_freertos_task_stat.c  test_freertos_task_suspend.c  test_freertos_taskcreate.c  test_freertos_timer.c
components/log/: CMakeLists.txt  log.c  log.h
components/platform/: CMakeLists.txt
components/platform/arch/: common.c  ms_interrupt.h  startup_NUCLEI_N.S  sys_tick.c  sys_tick.h  system.c
components/platform/driver/: flash.c  ms_flash.c  rtc_time.c  uart.c
components/platform/driver/1008_evb_board/: 1008_evbboard.c  1008_evbboard.h
components/platform/driver/FPGA_evb_board/: FPGA_evbboard.c
components/platform/driver/flash/: ms_flash_boya.c  ms_flash_boya.h  ms_flash_comm.c  ms_flash_comm.h  ms_flash_gd.c  ms_flash_gd.h
components/platform/hal/: aux_adc.c  gpio.c  i2s_master.c  ir0.c  ir1.c  ms_audio_adc.c  ms_flash_remap.c  ms_gpio.c  ms_pwm.c  ms_pwr.c  ms_queue.c  ms_rtc.c  ms_single_dmac.c  ms_sw_Key.c  ms_sw_Keypad.c  ms_timer.c  ms_uart.c  putchar.c  pwm.c  pwr.c  ringbuffer.c  spi_master.c  spi_slave.c  timer.c  trng.c  watchdog.c
components/platform/hal/common/: ms_audio_adc_hal.h  ms_audio_adc_regs.h  ms_ble_hal.h  ms_clock_hal.c  ms_clock_hal.h  ms_clock_ll.h  ms_dmac_hal.h  ms_dmac_ll.h  ms_dmac_regs.h  ms_flash_remap_hal.h  ms_flash_remap_ll.h  ms_gpio.h  ms_gpio_hal.h  ms_gpio_ll.c  ms_gpio_ll.h  ms_gpio_regs.h  ms_i2s.c  ms_i2s.h  ms_i2s_hal.h  ms_i2s_ll.h  ms_i2s_regs.h  ms_ir0.c  ms_ir0.h  ms_ir0_hal.h  ms_ir0_ll.h  ms_ir0_regs.h  ms_pinmux_hal.c  ms_pinmux_hal.h  ms_pwm_hal.h  ms_pwm_ll.c  ms_pwm_ll.h  ms_pwm_regs.h  ms_pwr_hal.h  ms_pwr_ll.h  ms_qspi_hal.h  ms_qspi_ll.h  ms_qspi_reg.h  ms_reset_hal.h  ms_reset_ll.h  ms_rtc_hal.h  (+25 more)
components/platform/hal/ms1008/: module_base_address.h  ms1008.h  ms_audio_adc_ll.h  ms_aux_adc.c  ms_aux_adc.h  ms_aux_adc_hal.h  ms_aux_adc_regs.h  ms_ble_ll.h  ms_keyscan.c  ms_keyscan_hal.h  ms_keyscan_ll.h  ms_keyscan_regs.h  ms_pinmux_ll.h  ms_sys_ctrl_regs.h  ms_watchdog.c  ms_watchdog_hal.h  ms_watchdog_ll.c  ms_watchdog_ll.h
components/platform/hal/ms1008_v2/: module_base_address.h  ms1008.h  ms_audio_adc_ll.h  ms_aux_adc.c  ms_aux_adc.h  ms_aux_adc_ll.c  ms_aux_adc_ll.h  ms_ir1.c  (+19 more)
components/platform/include/: aux_adc.h  flash.h  gpio.h  i2s_master.h  ir0.h  ir1.h  ms_audio_adc.h  ms_driver_def.h  ms_flash.h  ms_flash_remap.h  ms_keyscan.h  ms_pwm.h  ms_pwr.h  ms_queue.h  ms_rtc.h  ms_single_dmac.h  ms_sw_Key.h  ms_sw_Keypad.h  ms_timer.h  ms_trng.h  ms_uart.h  pwm.h  pwr.h  ringbuffer.h  rtc_time.h  spi_master.h  spi_slave.h  timer.h  trng.h  uart.h  watchdog.h
components/platform/test/: env_init.c  test_audio_adc.c  test_aux_adc.c  test_gpio.c  test_i2s_master.c  test_ir0.c  test_ir1.c  test_keyad2.c  test_ms_flash.c  test_ms_flash_remap.c  test_ms_pwr.c  test_ms_queue.c  test_ms_sys_ctrl_clock.c  test_pinmux.c  test_pwm.c  test_rtc_time.c  test_single_dmac.c  test_spi_master.c  test_spi_slave.c  test_sw_keypad.c  test_timer.c  test_trng.c  test_uart0.c  test_uart1.c  test_uart2.c  test_watchdog.c
components/pm/: CMakeLists.txt  pm_battery.c  pm_battery.h  pm_callback.c  pm_callback.h  pm_frequency.c  pm_frequency.h  pm_imp.c  pm_imp.h  pm_lock.c  pm_lock.h  pm_sleep.c  pm_sleep.h
components/unity/: CMakeLists.txt  unity_port_ms.c  unity_runner.c
components/unity/include/: unity_config.h  unity_test_runner.h
tools/test_ble/: CMakeLists.txt  test_ble.c
(+603 files in other folders)
